# geo-parameters

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
geo_parameters/: __init__.py  decoders.py  grid.py  metaparameter.py  ocean.py  parameter_funcs.py  relationships.py  ureg.py  wave.py  wind.py
geo_parameters/parameters/: ocean.py  wave.py  wind.py
src/: parameter_funcs.py
tests/: test_decode.py  test_dir_type.py  test_doc.py  test_find_me_in.py  test_funcs.py  test_i_am.py  test_is_in.py  test_is_same.py  test_isgp.py  test_my_family.py  test_names.py  test_wavenumber.py
