[project]
name = "geo-parameters"
version = "0.9.4"
description = "Metadata of geophysical (especially wave) parameters"
authors = [ { name = "Jan-Victor Björkqvist", email = "janvb@met.no" } ]
dependencies = [ "numpy", "pint" ]
requires-python = ">=3.9,<3.12"
readme = "README.md"

[project.urls]
repository = "http://github.com/bjorkqvi/geo-parameters"
